--- a/uc2/index.html
+++ b/uc2/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/carrossel.css">
     <title>Jornada Viagem</title>
@@ -11,20 +13,24 @@
 </head>
 
 <body>
-    <header class="configura1"> <!-- cabeçalho do conteúdo -->
-        <figure>
-            <img src="image/logo.jfif" alt="logotipo jornada viagem" width="100" height="80">
-        </figure>
-        <h1>Jornda viagens</h1>
-        <p>Explorando o mundo com você!</p>
-    </header>
-    <nav> <!--  área de navegação (menus)-->
+    <nav class="fixed-top">
+        <header> <!-- cabeçalho do conteúdo -->
+            <figure>
+                <img src="image/logo.jfif" alt="logotipo jornada viagem" width="100" height="80">
+            </figure>
+            <h1>Jornada viagens</h1>
+            <p>Explorando o mundo com você!</p>
+        </header>
+        <!--  área de navegação (menus)-->
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="https://www.rodei.com.br/" target="_blank">Blog</a></li>
-            <li><a href="#pacotes">Pacotes</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="index.html#pacotes">Pacotes</a></li>
+            <li><a href="index.html#contato">Contato</a></li>
+            <li><a href="destinos.html">Destinos</a></li>
         </ul>
     </nav>
+
     <main> <!-- parte principal do texto-->
         <section id="sobre">
             <h2>Sobre nós</h2>
